--- a/app/src/main/res/layout/activity_edit_audio.xml
+++ b/app/src/main/res/layout/activity_edit_audio.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".AddAudio">
-
+    tools:context=".EditAudio">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <androidx.cardview.widget.CardView
             android:layout_width="@dimen/_200sdp"
             android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
                     android:layout_height="wrap_content"
                     android:elevation="2dp">
                     <ImageView
-                        android:id="@+id/CatgoryImage"
+                        android:id="@+id/Image"
                         android:layout_width="@dimen/_100sdp"
                         android:layout_height="@dimen/_100sdp"/>
                 </androidx.cardview.widget.CardView>
@@ -42,12 +42,12 @@
                     android:layout_height="wrap_content"
                     android:text="Audio name"
                     android:layout_marginBottom="@dimen/_5sdp"/>
+
                     <Button
                         android:id="@+id/uploadAudio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Upload Audio"/>
-
                 <EditText
                     android:id="@+id/Name"
                     android:layout_marginTop="@dimen/_10sdp"
@@ -65,6 +65,11 @@
             android:id="@+id/upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Upload"/>
+            android:text="Save"/>
     </LinearLayout>
+
+
+
+
+
 </RelativeLayout>
