--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -10,30 +10,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
         <include
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:layout_height="@dimen/_60sdp">
+                <androidx.cardview.widget.CardView
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:elevation="@dimen/_5sdp">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </androidx.cardview.widget.CardView>
+
+                <ImageView
+                    android:id="@+id/speak"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"/>
+                <ImageView
+                    android:id="@+id/clear"
+                    android:layout_width="@dimen/_40sdp"
+                    android:layout_height="@dimen/_40sdp"/>
+            </LinearLayout>
+
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentView"
-            android:layout_marginTop="@dimen/_100sdp"
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
             android:layout_height="match_parent">
-
-
         </androidx.fragment.app.FragmentContainerView>
     </LinearLayout>
-
-
-
-
-
-
-
 
 </RelativeLayout>
 
