--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:gravity="center"
     tools:context=".MainActivity">
 
-    <Button
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_200sdp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/_90sdp"
+        android:src="@drawable/kidkite" />
+
+    <TextView
+        android:id="@+id/welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:fontFamily="@font/handosoftbold"
+        android:text="Welcome"
+        android:textColor="@color/fontblue"
+        android:textSize="@dimen/_35sdp"
+        android:layout_below="@id/gif"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/_60sdp"/>
+
+    <TextView
+        android:id="@+id/subtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/handosoftbold"
+        android:text="Let's get talking!"
+        android:textColor="@color/fontblue"
+        android:textSize="@dimen/_16sdp"
+        android:layout_below="@id/welcome"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/_7sdp"/>
+
+
+    <Button
         android:id="@+id/login"
-        android:gravity="center"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/_30sdp"
+        android:backgroundTint="@color/primaryblue"
+        android:text="Login" />
+
+
 
 </RelativeLayout>
