--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
@@ -6,25 +5,57 @@
     app:contentInsetStart="0dp"
     android:gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/blue">
+    android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/layalogo"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_32sdp"
-            android:src="@drawable/layalogo"
-            android:layout_marginTop="7dp"
-            android:layout_marginBottom="7dp"
-            android:layout_marginLeft="10dp"/>
-
-        <ImageView
-            android:id="@+id/flag"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_32sdp"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="7dp"
-            android:layout_marginBottom="7dp"
-            android:src="@drawable/ph" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp">
 
+                <TextView
+                    android:id="@+id/hellouser"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hello Mian"
+                    android:fontFamily="@font/handosoftbold"
+                    android:textSize="@dimen/_22sdp"
+                    android:textColor="@color/black"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/_18sdp"/>
+
+                <ImageView
+                    android:id="@+id/flag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_20sdp"
+                    android:src="@drawable/ph"
+                    android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="@dimen/_18sdp">
+
+                        <ImageView
+                            android:id="@+id/rotate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/_25sdp"
+                            android:src="@drawable/baseline_screen_rotation_24"
+                            android:layout_marginRight="@dimen/_15sdp"/>
+
+                        <ImageView
+                            android:id="@+id/setting"
+                            android:layout_width="wrap_content"
+                            android:layout_height="@dimen/_25sdp"
+                            android:src="@drawable/baseline_settings_24"
+                            android:layout_toRightOf="@id/setting"/>
+
+
+                </LinearLayout>
+
+
+
+        </RelativeLayout>
 </androidx.appcompat.widget.Toolbar>
