--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:title="Rotate"
         android:id="@+id/rotate"
         android:icon="@drawable/baseline_screen_rotation_24"
-        app:showAsAction="ifRoom"/>
-    <item
-        android:title="Parental Access"
-        android:id="@+id/parental_access"
-        android:icon="@drawable/baseline_lock_person_24"/>
+        app:showAsAction="ifRoom" />
     <item
         android:title="Settings"
         android:id="@+id/settings"
-        android:icon="@drawable/baseline_settings_24"/>
+        android:icon="@drawable/baseline_settings_24"
+        app:showAsAction="always"/>
 </menu>
