--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -16,43 +16,68 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-            <LinearLayout
-                android:orientation="horizontal"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="@dimen/_60sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginLeft="@dimen/_13sdp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/_5sdp"
                 android:layout_width="match_parent"
-                android:gravity="center"
-                android:layout_height="@dimen/_60sdp">
-                <androidx.cardview.widget.CardView
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/_5sdp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:elevation="@dimen/_5sdp">
+                android:layout_height="match_parent"
+                android:elevation="@dimen/_5sdp"
+                app:cardCornerRadius="@dimen/_3sdp">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-                </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/_18sdp"
+                android:layout_marginLeft="@dimen/_10sdp">
 
                 <ImageView
+                    android:layout_centerInParent="true"
                     android:id="@+id/speak"
-                    android:layout_marginEnd="@dimen/_5sdp"
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_40sdp"/>
+                    android:src="@drawable/speaking"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:padding="@dimen/_5sdp"
+                    android:background="@color/primaryblue"/>
+
                 <ImageView
                     android:id="@+id/clear"
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_40sdp"/>
+                    android:src="@drawable/trash"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:padding="@dimen/_5sdp"
+                    android:background="@color/primaryblue"/>
+
             </LinearLayout>
+
+
+        </LinearLayout>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentView"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:layout_height="match_parent">
+            tools:layout="@layout/fragment_category">
         </androidx.fragment.app.FragmentContainerView>
+
+
     </LinearLayout>
 
 </RelativeLayout>
