--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.CategoryFragment">
+    tools:context=".fragments.CategoryFragment"
+    android:layout_marginTop="@dimen/_30sdp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/rv"/>
+        android:id="@+id/rv"
+        android:layout_centerHorizontal="true"/>
 
 
 </RelativeLayout>
