--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="pastelorange">#FFEADE</color>
     <color name="pastellime">#F6FFDE</color>
     <color name="pastelpink">#FFDEF8</color>
+    <color name="teal_200">#80CBC4</color>
+    <color name="teal_700">#00796B</color>
 </resources>
