--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
     <!-- Primary brand color. -->
     <item name="colorPrimary">@color/blue</item>
     <item name="android:windowIsTranslucent">true</item>
-    <item name="colorPrimaryVariant">@color/skyblue</item>
+    <item name="colorPrimaryVariant">@color/primaryblue</item>
     <item name="colorOnPrimary">@color/white</item>
     <!-- Secondary brand color. -->
     <item name="colorSecondary">@color/teal_200</item>
