--- a/app/src/main/res/layout/tiles.xml
+++ b/app/src/main/res/layout/tiles.xml
@@ -6,7 +6,8 @@
     app:cardCornerRadius="@dimen/_5sdp"
     android:id="@+id/card"
     android:layout_margin="@dimen/_20sdp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,8 +31,10 @@
             android:text="Name"
             android:textAlignment="center"
             android:id="@+id/name"
-            android:textSize="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/handosoftbold"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_gravity="center"/>
     </LinearLayout>
 
